--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,6 +1,14 @@
 <html>
   <title></title>
+  <head>
+    <script src="/js/jquery-2.1.4.min.js"></script>
+  </head>
   <body>
-    Conn sucks balls!
+    <table id='lazy-web'></table>
   </body>
+  <script>
+    $(document).ready(function() {
+      
+    });
+  </script>
 </html>
