--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,6 +2,8 @@
   <title></title>
   <head>
     <script src="/js/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src="/js/goog/base.js"></script>
+    <script type="text/javascript" src="/js/ui/bizz.js"></script>
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
     <!-- <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
 <link rel="stylesheet" type="text/css" href="https://abs.twimg.com/a/1441217790/css/t1/twitter_core.bundle.css">
